@@ -118,6 +118,7 @@ def __cpu():
     return ret
 
 def __cpu_temp():
+    __cpu_temp.please_refresh_me = True
     try:
         import glob
         pathlist = glob.glob('/proc/acpi/thermal_zone/*')
@@ -166,6 +167,7 @@ def __pci():
     return ret
 
 def __battery():
+    __battery.please_refresh_me = True
     ret = []
     try:
         with open('/proc/acpi/battery/BAT0/state') as f:
