@@ -1,3 +1,8 @@
+2010-05-01 Homer Xing <homer.xing@gmail.com>
+
+    * Improve the efficiency of automatically updating "Information pane".
+      Only refresh necessary items.
+
 2010-04-30 CHEN Yangyang <skabyy@gmail.com>
 
     * Merge the "Hardware information pane" and the "Linux information pane"
